...
    required this.onZoomOut,
    required this.zoomPercent,
    super.key,
  });

  static const zoomOutButtonKey = ValueKey<String>('zoom-controls.out');
  static const zoomInButtonKey = ValueKey<String>('zoom-controls.in');
  static const zoomValueKey = ValueKey<String>('zoom-controls.value');

  final VoidCallback onZoomIn;
  final VoidCallback onZoomOut;
  final int zoomPercent;

...
